--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,42 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField "Boolean", "DEBUG_MODE", "true"
+        }
+
         release {
+            buildConfigField "Boolean", "DEBUG_MODE", "false"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        String privateLogin;
+        String privatePassword;
+
+        def privatePropFile = rootProject.file('private.properties')
+        def Properties privateProps = new Properties()
+
+        if (privatePropFile.canRead()) {
+            privateProps.load(new FileInputStream(privatePropFile))
+            privateLogin = privateProps['TOSH_AUTH_LOGIN']
+            privatePassword = privateProps['TOSH_AUTH_PASS']
+        } else {
+            privateLogin = "$System.env.TOSH_AUTH_LOGIN"
+            privatePassword = "$System.env.TOSH_AUTH_PASS"
+        }
+
+        if (privateLogin == 'null') {
+            throw new GradleException("TOSH_AUTH_LOGIN is null!")
+        }
+
+        if (privatePassword == 'null') {
+            throw new GradleException("TOSH_AUTH_PASS is null!")
+        }
+
+        applicationVariants.all { variant ->
+            variant.buildConfigField "String", "TOSH_APP_LOGIN", privateLogin
+            variant.buildConfigField "String", "TOSH_APP_PASS", privatePassword
         }
     }
     compileOptions {
@@ -28,6 +61,13 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
