--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ buildscript {
 }
 
 allprojects {
+    configurations.all {
+        resolutionStrategy.force 'com.squareup.okhttp3:okhttp:3.5.0'
+    }
     repositories {
         google()
         jcenter()
